; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_wc_db.c_svn_wc__db_scan_deletion_internal.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_wc_db.c_svn_wc__db_scan_deletion_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_wc__db_scan_deletion_internal(i8** %0, i8** %1, i8** %2, i8** %3, i32* %4, i8* %5, i32* %6, i32* %7) #0 {
  %9 = alloca i8**, align 8
  %10 = alloca i8**, align 8
  %11 = alloca i8**, align 8
  %12 = alloca i8**, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  store i8** %0, i8*** %9, align 8
  store i8** %1, i8*** %10, align 8
  store i8** %2, i8*** %11, align 8
  store i8** %3, i8*** %12, align 8
  store i32* %4, i32** %13, align 8
  store i8* %5, i8** %14, align 8
  store i32* %6, i32** %15, align 8
  store i32* %7, i32** %16, align 8
  %17 = load i8**, i8*** %9, align 8
  %18 = load i8**, i8*** %10, align 8
  %19 = load i8**, i8*** %11, align 8
  %20 = load i8**, i8*** %12, align 8
  %21 = load i32*, i32** %13, align 8
  %22 = load i8*, i8** %14, align 8
  %23 = load i32*, i32** %15, align 8
  %24 = load i32*, i32** %16, align 8
  %25 = call i32 @scan_deletion(i8** %17, i8** %18, i8** %19, i8** %20, i32* %21, i8* %22, i32* %23, i32* %24)
  %26 = call i32* @svn_error_trace(i32 %25)
  ret i32* %26
}

declare dso_local i32* @svn_error_trace(i32) #1

declare dso_local i32 @scan_deletion(i8**, i8**, i8**, i8**, i32*, i8*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
